# cookiecutter-cannula

./: README.md
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: Makefile  pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __main__.py  config.py  main.py  operations.graphql  schema.graphql
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/app/: base.html  page.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/app/_operations/: People.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/app/_static/css/: theme.css
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/gql/: context.py  sql.py  types.py
